--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,13 @@ Django==5.0.6
 django-allauth==0.63.1
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
+django-resized==1.0.2
+django-richtextfield==1.6.2
 django-summernote==0.8.20.0
 gunicorn==22.0.0
 idna==3.7
 packaging==24.0
+pillow==10.3.0
 psycopg2==2.9.9
 pytz==2024.1
 requests==2.31.0
