--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.7.0
 asgiref==3.8.1
 bleach==6.1.0
 certifi==2024.2.2
@@ -8,6 +9,7 @@ dj-database-url==2.1.0
 dj3-cloudinary-storage==0.0.6
 Django==5.0.6
 django-allauth==0.63.1
+django-autocomplete-light==3.11.0
 django-cloudinary-storage==0.3.0
 django-crispy-forms==2.1
 django-resized==1.0.2
@@ -18,6 +20,8 @@ idna==3.7
 packaging==24.0
 pillow==10.3.0
 psycopg2==2.9.9
+pydantic==2.7.1
+pydantic_core==2.18.2
 pytz==2024.1
 requests==2.31.0
 six==1.16.0
@@ -25,3 +29,4 @@ sqlparse==0.5.0
 typing_extensions==4.11.0
 urllib3==2.2.1
 webencodings==0.5.1
+whitenoise==6.2.0
