--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+pip>=24.0
 annotated-types==0.7.0
 asgiref==3.8.1
 bleach==6.1.0
@@ -18,6 +19,7 @@ django-summernote==0.8.20.0
 gunicorn==22.0.0
 idna==3.7
 packaging==24.0
+pillow==10.2.0
 psycopg2==2.9.9
 pydantic==2.7.1
 pydantic_core==2.18.2
